[package]
name = "track_element"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["sci_point"]
sci_point = ["rasta-rs"]
sci_signal = ["rasta-rs"]

[dependencies]
rasta-rs = {git = "https://github.com/ctiedt/rasta-rs", optional = true}

