[package]
name = "track_element"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["grpc_signal"]
grpc_signal = ["tonic", "prost"]

[dependencies]
serde_json = "1.0.87"
anyhow = "1.0.66"
tonic = { version = "0.9.2", optional = true }
prost = { version = "0.11.9", optional = true }

[build-dependencies]
tonic-build = { version = "0.9.2" }
